--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,6 +1,6 @@
 .photo-grid__item {
   max-width: 284px;
-  max-height: 213px;
+  height: 213px;
   object-fit: cover;
   padding: 0;
   margin: 0;
@@ -9,7 +9,7 @@
 @media screen and (max-width: 1024px) {
   .photo-grid__item {
     max-width: 300px;
-    max-height: 225px;
+    height: 225px;
     object-fit: cover;
     padding: 0;
     margin: 0;
@@ -19,13 +19,13 @@
 @media screen and (max-width: 768px) {
   .photo-grid__item {
     max-width: 352px;
-    max-height: 264px;
+    height: 264px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .photo-grid__item {
     max-width: 288px;
-    max-height: 216px;
+    height: 216px;
   }
 }
