--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -13,10 +13,8 @@
   .photo-grid {
     display: grid;
     grid-template-columns: 300px 300px 300px;
-    grid-template-rows: 225px 225px 225px 225px;
+    grid-template-rows: repeat(4, 225px);
     grid-gap: 14px;
-    margin: 0 auto 0 auto;
-    padding: 0;
   }
 }
 
@@ -24,9 +22,8 @@
   .photo-grid {
     display: grid;
     grid-template-columns: 352px 352px;
-    grid-template-rows: 264px 264px 264px 264px 264px 264px;
+    grid-template-rows: repeat(6, 264px);
     grid-gap: 16px;
-    margin: 0 auto 0 auto;
   }
 }
 
