further edits to enhance responsiveness across breakpoints

--- a/blocks/cover/__bg/cover__bg.css
+++ b/blocks/cover/__bg/cover__bg.css
@@ -46,6 +46,13 @@
   }
 }
 
+@media screen and (max-width: 425px) {
+  .cover__bg {
+    max-width: 425px;
+    /*height: 200px;*/
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover__bg {
     max-width: 320px;
