--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -27,6 +27,14 @@
   }
 }
 
+@media screen and (max-width: 425px) {
+  .photo-grid {
+    display: grid;
+    grid-template-columns: 410px;
+    grid-row-gap: 12px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .photo-grid {
     display: grid;
