--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -24,6 +24,14 @@
   }
 }
 
+@media screen and (max-width: 425px) {
+  .cover {
+    max-width: 425px;
+    /*height: 200px;*/
+    margin-top: 64px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .cover {
     max-width: 320px;
