--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -27,6 +27,13 @@
   }
 }
 
+@media screen and (max-width: 425px) {
+  .places {
+    max-width: 390px;
+  }
+}
+
+
 @media screen and (max-width: 320px) {
   .places {
     max-width: 320px;
