--- a/blocks/section/section.css
+++ b/blocks/section/section.css
@@ -11,32 +11,30 @@
 @media screen and (max-width: 1024px) {
   .section {
     max-width: 928px;
-    margin-left: auto;
-    margin-right: auto;
   }
   }
 
 @media screen and (max-width: 768px) {
   .section {
     max-width: 720px;
-    margin-left: auto;
-    margin-right: auto;
   }
   }
+
+  @media screen and (max-width: 425px) {
+    .section {
+      max-width: 400px;
+    }
+    }
 
   @media screen and (max-width: 375px) {
     .section {
       max-width: 343px;
-      margin-left: auto;
-      margin-right: auto;
     }
     }
 
     @media screen and (max-width: 320px) {
       .section {
         max-width: 288px;
-        margin-left: auto;
-        margin-right: auto;
       }
       }
 
