corrections from 2nd review

--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -16,11 +16,15 @@
    }
  }
 
+ @media screen and (max-width: 768px) {
+
+ }
+/*
 @media screen and (max-width: 768px) {
  .lead {
     margin: 50px auto 82px auto;
   }
-}
+}*/
 
 @media screen and (max-width: 320px) {
   .lead {
