--- a/blocks/places/__text-container/places__text-container.css
+++ b/blocks/places/__text-container/places__text-container.css
@@ -1,25 +1,11 @@
 .places__text-container {
   grid-area: description;
   align-self: start;
-  max-width: 484px;
+  /*max-width: 100%;*/
   margin: 0;
   padding: 0;
 }
 
-@media screen and (max-width: 1024px) {
-  .places__text-container {
-    max-width: 100%;
-
-  }
-}
-/*
-@media screen and (max-width: 928px) {
-  .places__text-container {
-    max-width: calc(100% - 24px*2);
-    margin-left: auto;
-    margin-right: auto;
-  }
-}*/
 
 
 
