--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,3 @@
-@import url(./__columns/header__columns.css);
 @import url(./__logo/header__logo.css);
 @import url(./__link/header__link.css);
 @import url(./__link/_active/header__link_active.css);
@@ -10,6 +9,10 @@
   display: flex;
   margin: 34px auto 0 auto;
   padding: 0;
+  max-width: 984px;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 
