--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,36 +1,32 @@
 .lead__image {
-  object-fit: contain;
-  max-width: 984px;
+  object-fit: cover;
+  max-width: 100%;
   max-height: 615px;
   margin: 0 auto 0 auto;
 }
 
-On 768 and 320: the lead picture should occupy the whole screen width.
 
 @media screen and (max-width: 1024px) {
   .lead__image {
     max-width: calc(100% - 48px*2);
-    /*max-width: 928px;
-    max-height: 580px;*/
+    margin: 0 48px;
     }
   }
 
 @media screen and (max-width: 984px) {
   .lead__image {
     max-width: 100%;
+    margin: 0 auto;
     }
   }
 
- @media screen and (max-width: 960px) {
+
+
+  @media screen and (max-width: 768px) {
     .lead__image {
-      max-width: 100%;
-      object-fit: cover;
+      max-width: 100vw;
       }
     }
 
-  @media screen and (max-width: 425px) {
-    .lead__image {
-      max-width: 100%;
-      }
-    }
+
 
