--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,5 @@
 @import url(./__item/photo-grid__item.css);
-@import url(./__gallery/photo-grid__gallery.css);
+
 
 .photo-grid {
   display: grid;
@@ -7,6 +7,7 @@
   grid-gap: 16px;
   margin: 0 auto 0 auto;
   padding: 0;
+  list-style: none;
 }
 
 /*
