--- a/blocks/places/__card/places__card.css
+++ b/blocks/places/__card/places__card.css
@@ -1,6 +1,7 @@
 .places__card {
   display: grid;
   grid-template-columns: 460px 484px;
+  /*grid-template-columns: 47.5% 49%;*/
   grid-column-gap: 40px;
   grid-row-gap: 60px;
   grid-template-areas:
@@ -15,51 +16,32 @@
 }
 
 
-
 @media screen and (max-width: 1024px) {
   .places__card {
-    grid-template-columns: 440px 456px;
-    grid-column-gap: 32px;
-    grid-row-gap: 48px;
-    padding: 0;
+    grid-template-columns: 47.5% 49%;
+    grid-column-gap: 3.5%;
   }
 }
 
-
-@media screen and (max-width: 928px) {
-  .places__card {
-    grid-template-columns: 44% 51%;
-    grid-column-gap: 5%;
-    padding: 0;
-  }
-}
-/*
-@media screen and (max-width: 900px) {
-  .places__card {
-    grid-template-columns: 400px 424px;
-    grid-column-gap: 32px;
-    padding: 0;
-    margin: 0 auto 60px auto;
-
-  }
-}*/
 
 @media screen and (max-width: 768px) {
   .places__card {
-    grid-template-columns: 340px 352px;
+    /*grid-template-columns: 340px 352px;
     grid-column-gap: 28px;
-    padding: 0;
+    padding: 0;*/
+    grid-row-gap: 32px;
     margin: 0 0 60px 0;
   }
 }
 
+/*
 @media screen and (max-width: 760px) {
   .places__card {
     grid-template-columns: 44% 51%;
     grid-column-gap: 5%;
     padding: 0;
   }
-}
+}*/
 
 @media screen and (max-width: 560px) {
   .places__card {
