--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -2,8 +2,7 @@
   grid-area: image;
   align-self: start;
   justify-self: center;
-  max-width: 460px;
-  object-fit: contain;
+  max-width: 100%; /*I tried removing this, but the image expands outside of its grid cell when I do */
   margin: 0 auto 0 auto;
   padding: 0;
 }
@@ -11,22 +10,16 @@
 
 @media screen and (max-width: 1024px) {
   .places__image {
-    max-width: 100%;
     margin: 0;
   }
 }
 
 
 
-@media screen and (max-width: 768px) {
-  .places__image {
-    max-width: 100%;
-  }
-}
-
 @media screen and (max-width: 720px) {
   .places__image {
     max-width: 93%;
+    margin: 0 auto 0 auto;
   }
 }
 
@@ -36,11 +29,11 @@
   }
 }
 
-
+/*
 @media screen and (max-width: 320px) {
   .places__image {
     max-width: 320px;
   }
-}
+}*/
 
 
