--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,7 +1,6 @@
 .places__title {
   grid-area: title;
   align-self: end;
-  font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
@@ -9,19 +8,18 @@
   color: #fff;
   margin: 0;
   padding: 0;
-  max-width: 460px;
+  max-width: 100%;
   align-content: flex-end;
 }
 
 @media screen and (max-width: 1024px) {
   .places__title {
-    max-width: 440px;
+    /*max-width: 440px;*/
   }
 }
 
 @media screen and (max-width: 928px) {
   .places__title {
-    max-width: 100%;
     font-size: 62px;
     line-height: 56px;
   }
@@ -36,7 +34,7 @@
 
 @media screen and (max-width: 800px) {
   .places__title {
-    max-width: 340px;
+   /* max-width: 340px;*/
     font-size: 42px;
     line-height: 46px;
   }
