--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -9,7 +9,8 @@
 
 .places {
   margin: 92px auto 0 auto;
-  max-width: 985px;
+  max-width: 984px;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 1024px) {
@@ -18,18 +19,12 @@
     max-width: calc(100% - 48px*2);
   }
 }
-/*
-@media screen and (max-width: 928px) {
-  .places {
-    max-width: calc(100% - 48px*2);
-  }
-}*/
+
 
 @media screen and (max-width: 768px) {
   .places {
     margin-top: 88px;
     max-width: 93.75%;
-
   }
 }
 
@@ -44,6 +39,6 @@
 @media screen and (max-width: 320px) {
   .places {
     margin-top: 64px;
-    max-width: 320px;
+   /* max-width: 320px;*/
   }
 }
