--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -15,6 +15,7 @@
 @media screen and (max-width: 1024px) {
   .lead__caption {
     text-align: left;
+    margin-left: 48px;
   }
 }
 
@@ -22,8 +23,8 @@
   .lead__caption {
     text-align: left;
     margin-left: 24px;
-    }
   }
+}
 
 
 @media screen and (max-width: 768px) {
@@ -37,7 +38,7 @@
   .lead__caption {
     text-align: left;
     margin-left: 8px;
-    }
-    }
+  }
+}
 
 
