add quick comment in lead__image.css

--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -5,6 +5,8 @@
   margin: 0 auto 0 auto;
 }
 
+/*To Marina: sorry, I don't know what happened.  I thought I pushed the changes to github, but apparently not. Trying again.  Thank you for everythign! */
+
 
 @media screen and (max-width: 1024px) {
   .lead__image {
