edit note in lead__image.css

--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -5,7 +5,7 @@
   margin: 0 auto 0 auto;
 }
 
-/*To Marina: sorry, I don't know what happened.  I thought I pushed the changes to github, but apparently not. Trying again.  Thank you for everythign! */
+/*To Marina: sorry, I don't know what happened.  I thought I pushed the changes to github, but apparently not. Trying again.  Thank you for everything! */
 
 
 @media screen and (max-width: 1024px) {
